--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "filebytes"]
 	path = filebytes
-	url = https://github.com/sashs/filebytes.git
+	url = https://github.com/dstarikov/filebytes.git
